Closed
Bug 376863
Opened 19 years ago
Closed 19 years ago
bookmarkId is set to the node type for bookmark folders?
Categories
(Firefox :: Bookmarks & History, defect)
Firefox
Bookmarks & History
Tracking
()
RESOLVED
FIXED
People
(Reporter: asaf, Assigned: dietrich)
References
Details
Attachments
(1 file)
|
4.87 KB,
patch
|
asaf
:
review+
|
Details | Diff | Splinter Review |
node.bookmarkId for the "Bookmarks Toolbar Folder" is set to 6 for me, which happens to be node.type.
| Assignee | ||
Comment 1•19 years ago
|
||
mano, can you post your STR? I've not been able to reproduce this.
| Assignee | ||
Comment 2•19 years ago
|
||
bookmarkId property should not be set for folder nodes. (patch includes test and removes the old db dump data).
Attachment #261191 -
Flags: review?(mano)
| Reporter | ||
Comment 3•19 years ago
|
||
Comment on attachment 261191 [details] [diff] [review]
fix v1
r=mano.
Attachment #261191 -
Flags: review?(mano) → review+
| Assignee | ||
Comment 4•19 years ago
|
||
Checking in toolkit/components/places/src/nsNavBookmarks.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavBookmarks.cpp,v <-- nsNavBookmarks.cpp
new revision: 1.79; previous revision: 1.78
done
Checking in toolkit/components/places/tests/bookmarks/test_bookmarks.js;
/cvsroot/mozilla/toolkit/components/places/tests/bookmarks/test_bookmarks.js,v <-- test_bookmarks.js
new revision: 1.4; previous revision: 1.3
done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Reporter | ||
Updated•19 years ago
|
Flags: in-testsuite+
Comment 5•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•