Bug 376863  bookmarkId is set to the node type for bookmark folders? (r=mano)